--- a/PackagesSender/PackagesSender/appsettings.json
+++ b/PackagesSender/PackagesSender/appsettings.json
@@ -6,8 +6,8 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=SQL02;Database=SR_Test;User Id=bps;password=bps;Trusted_Connection=False;MultipleActiveResultSets=true;"
-      //"DefaultConnection": "Server=.;Database=PackagesManager;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    //place for your database
+      "DefaultConnection": "Server=xx;Database=xxx;Trusted_Connection=True;MultipleActiveResultSets=true;"
 
     },
    "AllowedHosts": "*"
