--- a/AcceptanceChecker/AcceptanceChecker/appsettings.json
+++ b/AcceptanceChecker/AcceptanceChecker/appsettings.json
@@ -6,8 +6,8 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection":"Server=SQL02;Database=SR_Test;User Id=bps;password=bps;Trusted_Connection=False;MultipleActiveResultSets=true;"
-    //"DefaultConnection": "Server=.;Database=AcceptanceChecker;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  //add your database
+    //"DefaultConnection": "Server=xxx;Database=xxxx;Trusted_Connection=True;MultipleActiveResultSets=true;"
 
   },
   "AllowedHosts": "*"
